--- a/BookDonation.Web/Web.config
+++ b/BookDonation.Web/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookDonation.Web-20181108120310.mdf;Initial Catalog=aspnet-BookDonation.Web-20181108120310;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="BookDonationDB" connectionString="Data Source=localhost\SQLExpress;Initial Catalog=BookDonationDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
