--- a/BookDonation.Web/Web.config
+++ b/BookDonation.Web/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookDonation.Web-20181108120310.mdf;Initial Catalog=aspnet-BookDonation.Web-20181108120310;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-BookDonation.Web-20181108120310.mdf;Initial Catalog=aspnet-BookDonation.Web-20181108120310;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
