--- a/BookDonation.Business/BookDonation.Business.csproj
+++ b/BookDonation.Business/BookDonation.Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BooksDon.cs" />
     <Compile Include="BusinessDays.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
