--- a/BookDonation.Web/BookDonation.Web.csproj
+++ b/BookDonation.Web/BookDonation.Web.csproj
@@ -305,6 +305,7 @@
     <Content Include="Views\Home\DonateBook.cshtml" />
     <Content Include="Views\Home\DonateSuccess.cshtml" />
     <Content Include="Views\Home\Cart.cshtml" />
+    <Content Include="Views\Home\PickUpDate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
